# graph-phishing-detection

./: .gitignore  .zenodo.json  CITATION.cff  LICENSE  README.md  SUBMISSION_CHECKLIST_CS.md  make_zenodo_archive.ps1  requirements.txt
code/: README.md
code/analysis/: plot_cascade.py  plot_figures.py  plot_graph_viz.py  plot_p3.py
code/cascadebench/: README.md  __init__.py  attack.py  cli.py  detect.py  evaluate.py  experiments.py  features.py  graph.py  models.py  plot_cb.py  pyproject.toml  search.py  stats.py  topology.py
code/cascadebench/tests/: test_smoke.py
code/data/: org_graph.py  twin_generator.py
code/experiments/: exp_cascade.py  exp_cascade_arch.py  exp_cascade_enron.py  exp_cascade_fpr.py  exp_cascade_realgraphs.py  exp_cascade_stealth.py  exp_cascade_sweep.py  exp_cascade_tgn.py  exp_compromised.py  exp_consistency.py  exp_content_fusion.py  exp_enron_leak_audit.py  exp_enron_multiplex.py  exp_enron_temporal.py  exp_enron_temporal_split.py  exp_extended.py  exp_fusion.py  exp_gnn.py  exp_gnn_consistency.py  exp_layer_by_threat.py  exp_layer_selection.py  exp_multiplex.py  exp_p3_adaptive.py  exp_p3_community_label.py  exp_p3_elliptic.py  exp_p3_elliptic_graph.py  exp_p3_gridsearch.py  exp_p3_multistrat.py  exp_p3_panel.py  exp_p3_pareto.py  exp_p3_when_graph.py  exp_provenance_attackers.py  exp_provenance_enron.py  exp_provenance_org.py  exp_provenance_realistic.py  exp_provenance_sweep.py  (+4 more)
paper/: README.md  bibliography.bib  highlights.txt  main.abs  main.tex
references/: README.md  TODO_download.md  arxiv_list.tsv  fetch_arxiv_pdfs.sh
(+441 files in other folders)
