[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "cascadebench"
version = "0.1.0"
description = "Leak-aware adversarial testbed for graph-based phishing and lateral-movement detection"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Kamil Warpechowski"}, {name = "Bogdan Ksiezopolski"}]
license = {text = "MIT"}
dependencies = ["numpy", "scikit-learn", "lightgbm", "torch"]

[project.scripts]
cascadebench = "cascadebench.cli:main"

[tool.setuptools]
packages = ["cascadebench"]
